changed overall font family

--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,7 @@
   text-align: center;
   background: #232323;
   min-height: 1500px;
+  font-family: 'Lekton';
 }
 .photo-header{
 height: 560.35px;
