--- a/src/App.css
+++ b/src/App.css
@@ -17,6 +17,22 @@ border-bottom: 4px solid rgba(0, 0, 0, 0.8);
     color: #FFFFFF;
   }
 
+  .ItemBorderBox{
+    background: transparent;
+    color: white;
+    border-width: 2px;
+    padding: 5px;
+    border-style: solid;
+    border-image: linear-gradient(to right bottom, #260B3C, #a053df);
+    border-image-slice: 1;
+    width: fit-content;
+
+    position: relative;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+  }
+
 .test-tekst{
   color: white;
 }
