--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,9 @@ border-bottom: 4px solid rgba(0, 0, 0, 0.8);
   .Header-Tekst{
     text-align: right;
     color: #FFFFFF;
+    justify-content: flex-end;
+  align-content: center
+  
   }
 
   .ItemBorderBox{
