--- a/src/App.css
+++ b/src/App.css
@@ -75,13 +75,12 @@ margin-top: 20px;
   .ItemBorderBox{
     background: transparent;
     color: white;
-    border-width: 2px;
     padding: 5px;
-    border-style: solid;
-    border-image: linear-gradient(to right bottom, #260B3C, #a053df);
+    border-top: 2px solid;
+    border-bottom: 2px solid;
+    border-image: radial-gradient(circle at 10% 20%, rgb(254, 3, 104) 9.3%, rgb(103, 3, 255) 89.5%);
     border-image-slice: 1;
     width: fit-content;
-
     position: relative;
     display: inline-flex;
     justify-content: center;
@@ -98,19 +97,16 @@ margin-top: 20px;
 }
 
 .Gradient-background{
-  
 width: 375.32px;
 height: 651.52px;
 left: 500px;
 top: 1316px;
-
 background: linear-gradient(180deg, #2400FF 0%, #00FFD1 100%);
 filter: blur(200px);
 transform: rotate(175.99deg);
 }
 
-.ImgKim{
-  
+.ImgKim{ 
 width: 450.66px;
 height: auto;
 left: 176.34px;
@@ -124,7 +120,7 @@ top: 677.39px;
   border-width: 3px;
   padding: 5px;
   border-style: solid;
-  border-image: linear-gradient(to right bottom, #260B3C, #a053df);
+  border-image: radial-gradient(circle at 10% 20%, rgb(254, 3, 104) 9.3%, rgb(103, 3, 255) 89.5%);
   border-image-slice: 1;
   width: 150px;
 }
@@ -140,12 +136,12 @@ top: 677.39px;
   background: transparent;
   color: white;
   cursor: pointer;
-  border-width: 3px;
+  border-top: 2px solid;
+  border-bottom: 2px solid;
   padding: 5px;
-  border-style: solid;
-  border-image: linear-gradient(to right bottom, #260B3C, #a053df);
+  border-image: radial-gradient(circle at 10% 20%, rgb(254, 3, 104) 9.3%, rgb(103, 3, 255) 89.5%);
   border-image-slice: 1;
-}
+  }
 
 .ServiceCards{
   position: relative;
@@ -173,10 +169,10 @@ top: 677.39px;
   background: transparent;
   color: white;
   cursor: pointer;
-  border-width: 3px;
+  border-width: 2px;
   padding: 5px;
   border-style: solid;
-  border-image: linear-gradient(to right bottom, #260B3C, #a053df);
+  border-image: radial-gradient(circle at 10% 20%, #30cfd0 0%, #330867 100%);
   border-image-slice: 1;
   width: 100px;
 }
@@ -220,6 +216,13 @@ top: 677.39px;
 
 .text-Livingraw h1{
   font-size: 40px;
+}
+
+.Contact-Border{
+  border-top: 2px solid;
+  margin-bottom: 10px;
+  border-image: linear-gradient(to right bottom, #260B3C, #a053df);
+  border-image-slice: 1;
 }
 
 
